-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 10, jfx11
-
Component/s: javafx
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8196957 | 10u-cpu | Arunprasad Rajkumar | P2 | Resolved | Fixed | master |
| JDK-8197585 | 10.0.1 | Arunprasad Rajkumar | P2 | Closed | Fixed | b05 |
| JDK-8196958 | 8u192 | Arunprasad Rajkumar | P2 | Resolved | Fixed | b01 |
| JDK-8197587 | 8u172 | Arunprasad Rajkumar | P2 | Resolved | Fixed | b06 |
| JDK-8197586 | 8u171 | Arunprasad Rajkumar | P2 | Closed | Fixed | b06 |
Merge changes from GTK WebKit 2.18.6 release.
[1] https://trac.webkit.org/log/webkit/releases/WebKitGTK/webkit-2.18
[1] https://trac.webkit.org/log/webkit/releases/WebKitGTK/webkit-2.18
- backported by
-
JDK-8196957 Cherry pick GTK WebKit 2.18.6 changes
-
- Resolved
-
-
JDK-8196958 Cherry pick GTK WebKit 2.18.6 changes
-
- Resolved
-
-
JDK-8197587 Cherry pick GTK WebKit 2.18.6 changes
-
- Resolved
-
-
JDK-8197585 Cherry pick GTK WebKit 2.18.6 changes
-
- Closed
-
-
JDK-8197586 Cherry pick GTK WebKit 2.18.6 changes
-
- Closed
-
- clones
-
JDK-8194935 Cherry pick GTK WebKit 2.18.5 changes
-
- Resolved
-
- relates to
-
JDK-8196968 One time crash on exit in JNIEnv_::CallObjectMethod
-
- Resolved
-
(1 clones, 1 relates to)