8196677: Cherry pick GTK WebKit 2.18.6 changes

Reviewed-by: kcr, mbilla